--- a/packages/apps/lightning-ui-docs/.storybook/manager-head.html
+++ b/packages/apps/lightning-ui-docs/.storybook/manager-head.html
@@ -67,4 +67,9 @@
     border: 1px solid rgb(74, 74, 74);
     padding: 10px 20px;
   }
+
+  /* temporary solution for background issue not being recognized by appContentBG */
+  #storybook-preview-iframe {
+    background-color: transparent !important;
+  }
 </style>
