--- a/packages/apps/lightning-ui-docs/.storybook/preview-head.html
+++ b/packages/apps/lightning-ui-docs/.storybook/preview-head.html
@@ -16,8 +16,26 @@
   SPDX-License-Identifier: Apache-2.0
 -->
 
+<!-- use to style elements in Storybook Docs -->
 <style>
-  .sbdocs.sbdocs-li {
-    color: white !important;
+  /* transition background Docs to Story */
+  /* transition background from Story to Doc */
+  .sb-preparing-docs,
+  .sb-preparing-story {
+    background-color: #1b1c1d;
+  }
+  /* NOTE: this class is set to background and not background-color */
+  .sb-previewBlock {
+    background: #1b1c1d;
+  }
+
+  /* hides the args table that shows briefly during transition from Story to Docs */
+  .sb-argstableBlock {
+    display: none;
+  }
+
+  /* loading icons only seen during load/transition from Story to Docs */
+  .sb-previewBlock_icon {
+    background-color: #1b1c1d;
   }
 </style>
