fix(Storybook): adds back commented out code

--- a/packages/apps/lightning-ui-docs/.storybook/manager-head.html
+++ b/packages/apps/lightning-ui-docs/.storybook/manager-head.html
@@ -25,7 +25,7 @@
 
   /* temporary solution for background issue not being recognized by appContentBG */
   #storybook-preview-iframe {
-    /* background-color: transparent !important; */
+    background-color: transparent !important;
   }
 
   .grid-overlay-panel-wrapper,
